# kerberosauthenticator

./: .coveragerc  .flake8  .gitattributes  .githubactivity.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.rst  RELEASE.md  dev-requirements.txt  github_deploy_key_jcrist_kerberosauthenticator.enc  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yaml
.github/workflows/: build.yaml
continuous_integration/: before_install.sh  install.sh  script.sh
continuous_integration/docker/: Dockerfile
continuous_integration/docker/files/etc/: krb5.conf  supervisord.conf
continuous_integration/docker/files/etc/supervisor.d/: kerberos.conf
continuous_integration/docker/files/var/kerberos/krb5kdc/: kdc.conf
docs/: Makefile  environment.yml
docs/source/: conf.py  index.rst  options.rst
docs/source/_static/: custom.css
docs/source/_templates/: help.html
docs/sphinxext/: autodoc_traitlets.py
kerberosauthenticator/: __init__.py  _version.py  auth.py
kerberosauthenticator/templates/: kerberos_login_error.html
kerberosauthenticator/tests/: conftest.py  test_authenticator.py
